assets/stylesheets/_article.scss
$clr-lightGray: #e7e6e2;
$clr-mediumLightGray: #686563;

$clr-bodyText: #292827;
$clr-titleText: #fff;
$clr-publishedText: $clr-mediumLightGray;
$clr-captionText: $clr-mediumLightGray;
$clr-titleTextShadow: $clr-bodyText;
$clr-border: $clr-lightGray;
$clr-quoteBg: $clr-lightGray;
$clr-quoteBorder: rgba(255, 255, 255, 0.3);
$clr-linkText: #5c8bd1;
$clr-factboxBg: $clr-lightGray;
$clr-opinionBg: #e9d14f;
$textMaxLineLength: 690px;
$textBodyPadding: 18px;

.article {
    background: #fff;
    font-family: "Open Sans", sans-serif;
    max-width: 1000px;
    margin: 0 auto;
}

h1 {
    font-weight: 400;
}

h2 {
    font-size: 19px;
    line-height: 24px;
    margin-top: 48px;
}

.article img {
    max-width: 100%;
    display: block;
    height: auto;
}

.article a {
    color: $clr-linkText;
}

.article-header-locked {
    height: 0;
    padding-bottom: 100%;
    position: relative;
    .article-header-image > div {
        padding-bottom: 100%;
        width: 100%;
        background-size: cover;
        background-position: 50%;
    }

    .article-header-image {
        position: absolute;
        width: 100%;
    }
}

.article-header-dynamic {
    position: relative;
    overflow: hidden;

    .article-header-image > img {
        height: 350px;
        width: auto;
        max-width: 1600px;
    }
}

.alf-gt400 .article-header-dynamic .article-header-image > img {
    height: 400px;
}

.alf-gt450 .article-header-dynamic .article-header-image > img {
    height: 450px;
}

.alf-gt500 .article-header-dynamic .article-header-image > img {
    height: 500px;
}

.alf-gt600 .article-header-dynamic .article-header-image > img {
    height: 600px;
}

.alf-gt700 .article-header-dynamic .article-header-image > img {
    height: 700px;
}

.alf-gt800 .article-header-dynamic .article-header-image > img {
    height: 800px;
}

.alf-gt900 .article-header-dynamic .article-header-image > img {
    height: 900px;
}

.alf-gt1000 .article-header-dynamic .article-header-image > img {
    height: 1000px;
}

.article-title-container {
    width: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
    font-size: 24px;
    line-height: 1.2;
    padding-bottom: 18px;
}

.article-title-container h1 {
    max-width: 690px;
    margin: 0 auto;
}

.alf-gt400 .article-title-container {
    font-size: 28px;
}

.alf-gt500 .article-title-container {
    font-size: 36px;
}

.alf-gt600 .article-title-container {
    font-size: 42px;
}

.alf-gt700 .article-title-container {
    font-size: 48px;
}

.alf-gt800 .article-title-container {
    font-size: 54px;
}

.alf-gt900 .article-title-container {
    font-size: 68px;
}

.article-title {
    font-family: "Playfair Display", serif;
    font-weight: 400;
    color: $clr-titleText;
    text-shadow: 1px 1px 1px $clr-titleTextShadow;
    padding: 0;
    margin: 0 18px;
}

.article-header-no-image {
    padding: 0 18px;
}

.article-header-no-image .article-title {
    color: $clr-bodyText;
    text-shadow: none;
    font-size: 24px;
    max-width: 690px;
    margin: 0 auto;

    h1 {
        margin-bottom: 0;
    }
}

.article-preamble {
    font-weight: 300;
    font-size: 21px;
    line-height: 27px;
    padding: 0 18px;
    margin: 27px 0;
}

.article-preamble-no-image  {
    margin-top: 17px;
}

.article-excerpt {
    max-width: 690px;
    margin: 0 auto;
}

.article-body {
    padding: 0 $textBodyPadding;
    font-size: 16px;
    line-height: 24px;
    color: $clr-bodyText;
    max-width: $textMaxLineLength;
    margin: 0 auto;

    p {
        margin-bottom: 17px;
    }
}

.image-full {
    margin: 0 -18px;
}

.figure-caption {
    padding: 18px 18px;
    font-size: 13px;
    line-height: 18px;
    color: $clr-captionText;
    border-bottom: 1px solid $clr-border;

    .image-count {
        font-weight: 700;
    }
}

.image-slideshow .figure-caption {
    padding: 10px 18px 36px;
}

.image-left {
    float: left;
    width: 42%;
    margin: 0 18px 17px -18px;
    padding-top: 6px;

    .figure-caption {
        padding: 5px 10px 13px;
    }
}

.image-right {
    float: right;
    width: 42%;
    margin: 0 -18px 17px 18px;
    padding-top: 6px;

    .figure-caption {
        padding: 5px 10px 13px 0;
    }
}

.quote {
    margin: 0 -18px 17px;
    background: $clr-quoteBg;
    padding: 0 18px;
    clear: both;
    text-align: center;

    blockquote {
        padding: 18px 0 18px;
        margin: 0;
        font-style: italic;
        font-size: 24px;
        line-height: 33px;
    }

    blockquote:before {
        content: "\00ab";
    }

    blockquote:after {
        content: "\00bb";
    }

    figcaption {
        border-top: 1px solid $clr-quoteBorder;
        text-transform: uppercase;
        padding: 10px 0;
    }
}

.article-body .factbox {
    margin: 0 -18px 17px;
    background: $clr-factboxBg;
    padding: 1px 18px 9px;
    clear: both;
    font-size: 16px;
    line-height: 24px;

    p {
        margin: 9px 0;
    }

    ul {
        padding-left: 21px;
    }

    li {
        font-size: 14px;
        line-height: 22px;
        margin-bottom: 9px;
    }
}

.factbox-title {
    font-size: 19px;
    line-height: 24px;
}

.article-byline-container {
    border-top: 1px solid $clr-border;
    border-bottom: 1px solid $clr-border;
    font-size: 14px;
    line-height: 19px;
    padding: 18px 0;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.article-byline {
    padding: 0 $textBodyPadding;
    max-width: $textMaxLineLength;
    margin: 0 auto;
    box-sizing: content-box;
    flex-grow: 1;

    .authors {
        font-weight: 700;
    }
}

.article-byline-buttons,
.article-published-buttons {
    flex-basis: 32 + 32 + 10 + 18px;
    //display: flex;
    display: none;
}

.article-published-buttons {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 0;
}

.article-button-facebook {
    width: 32px;
    height: 32px;
    margin-right: 10px;
    background: url('../gfx/share-facebook.svg') no-repeat;
    background-size: cover;
}

.article-button-more {
    width: 32px;
    height: 32px;
    margin-right: 18px;
    background: url('../gfx/share-expand.svg') no-repeat;
    background-size: cover;
}

.article-published-container {
    font-size: 14px;
    line-height: 19px;
    padding: 18px 0;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    position: relative;
}

.article-published {
    padding: 0 $textBodyPadding;
    max-width: $textMaxLineLength;
    color: $clr-publishedText;
    margin: 0 auto;
    box-sizing: content-box;
    flex-grow: 1;
}

.article-opinion .vignette {
    color: #e9d14f;
    margin-bottom: 0;
    padding: 0 18px;
    margin-top: 27px;
    text-transform: uppercase;
}

.article-vignette {
    padding: 0 18px;
}

.article-vignette .vignette {
    max-width: 690px;
    margin: 0 auto;
    margin-top: 27px;
    padding: 0;
}

.article-opinion .article-preamble {
    margin-top: 10px;
}

.article-opinion .quote {
    background-color: #E9D14F;
}

.article-opinion .article-biography {
    max-width: 690px;
    margin: 0 auto;
    padding-bottom: 27px;
}

.article-opinion .article-biography .biography {
    background-color: #E9D14F;
    display: flex;
}

.article-opinion .article-biography .biography-image {
    max-width: 35%;
    width: 130px;
}

.biography-image img {
    padding-top: 0;
}

.biography-image .image-full img {
    padding-top: 0;
}

.article-opinion .article-biography h3 {
    font-size: 18px;
    line-height: 21px;
    margin: 0;
}
.article-opinion .article-biography .biography-description {
    padding-left: $textBodyPadding;
    padding-right: $textBodyPadding;
    padding-top: 1em;
    width: 65%;
}

.article-opinion .article-biography .biography-description p {
    margin-top: 8px;
    font-size: 14px;
    line-height: 20px;
}

.article-opinion .article-biography .image-full {
    margin: 0;
}

.article-opinion .article-biography .figure-caption {
    display: none;
}

.videocontainer {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
}

.videocontainer iframe {
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
}

@media (max-width: 700px) {
    .article .image-right, .article .image-left {
        margin: 0 -18px;
        width: inherit;
    }

    .article .image-left .figure-caption, .article .image-right .figure-caption {
        padding: 18px 18px;
    }
}

@media (min-width: 690px) {
    .quote, .article-body .factbox {
        margin-left: auto;
        margin-right: auto;
    }
}

@media (min-width: 1000px) {
    .article .image-right, .article .image-left {
        width: 300px;
        clear: both;
    }

    .article .image-right .figure-caption, .article .image-left .figure-caption {
        color: #686563;
    }

    .article .image-left {
        margin-left: -155px;
    }

    .article .image-right {
        margin-right: -155px;
    }

    .article .image-left .figure-caption {
        padding-left: 10px;
    }

    .article .image-right .figure-caption {
        padding-right: 10px;
    }

    .article .image-full {
        margin-left: -155px;
        margin-right: -155px;
        margin-bottom: 18px;
    }

    .article .image-full img {
        width: 100%;
    }


    .article img {
        padding-top: 18px;
    }
}

.article-video {
    h1 {
        color: #292827;
        font-weight: 800;
        font-size: 1.7em;
        text-shadow: none;
    }

    .article-published-buttons {
        display: none;
    }
}

